--- a/overlay/templates/overlay/servers.html
+++ b/overlay/templates/overlay/servers.html
@@ -4,13 +4,26 @@
 {% endif %}
 {% if srvs %}
 <h2>All available cache servers observed from the current server are:</h2>
-    <dl>
+<table style="width:80%">
+    <tr>
+	<td> Cache Server Name</td>
+	<td> IP Address</td>
+	<td> RTT to {{ curSrv.name }} </td>
+	<td> Recent QoE Evaluated </td>
+	<td> Recent Load Monitored </td>
+	<td> Recent BW Monitored </td>
+    <tr>
     {% for srv in srvs %}
-        <dt>Cache Server Name: {{ srv.name }} </dt>
-	<dd>- The IP address of {{ srv.name }} is : {{ srv.ip}} </dd>
-	<dd>- The RTT from {{ curSrv.name }} to {{ srv.name }} is : {{ srv.rtt}} </dd>
+    <tr>
+        <td> {{ srv.name }} </td>
+	<td> {{ srv.ip }} </td>
+	<td> {{ srv.rtt }} </td>
+	<td> {{ srv.qoe }} </td>
+	<td> {{ srv.load }} </td>
+	<td> {{ srv.bw }} </td>
+    </tr>
     {% endfor %}
-    </dl>
+</table>
 {% else %}
     <p>No servers has been initialized in the Server Model. Please run http://cache_agent:port/overlay/init/.</p>
 {% endif %}
