--- a/video/templates/video/videos.html
+++ b/video/templates/video/videos.html
@@ -2,14 +2,22 @@
 <h1>Show all the cached videos on agent {{ host }}</h1>
 {% endif %}
 {% if videos %}
-    <dl>
+<table style="width:90%">
+    <tr>
+	<td>Video ID</td>
+	<td>Video Real Name</td>
+	<td>Servers caching the video</td>
+	<td>Is the video cached on {{ host }}</td>
+    <tr>
     {% for vid in videos %}
-        <dt>Video ID: {{ vid.id }} </dt>
-	<dd>- The Real Video Name of Video {{ vid.id }} is : {{ vid.name }} </dd>
-	<dd>- The servers caching the Video {{ vid.id }} are : {{ vid.srvs }} </dd>
-	<dd>- The video is cached locally : {{ vid.isLocal }} </dd>
+    <tr>
+        <td> {{ vid.id }} </td>
+	<td> {{ vid.name }} </td>
+	<td> {{ vid.srvs }} </td>
+	<td> {{ vid.isLocal }} </td>
+    </tr>
     {% endfor %}
-    </dl>
+</table>
 {% else %}
     <p>No locally cached videos have been loaded. Please run http://cache_agent:port/video/init/ to initialize the list.</p>
 {% endif %}
