--- a/qoe/templates/qoe/qoes.html
+++ b/qoe/templates/qoe/qoes.html
@@ -1,4 +1,6 @@
-<h1>Show all qoe traces on all servers</h1>
+{% if localhost %}
+    <h1>Show all qoe traces for all servers on cache agent : {{ localhost }}</h1>
+{% endif %}
 {% if qoes %}
     {% for key, value in qoes.items %}
 	<h3>All qoe traces for server : {{ key }}</h3>
