--- a/monitor/templates/monitor/load.html
+++ b/monitor/templates/monitor/load.html
@@ -1,10 +1,21 @@
 <h1>Show the 30 recent load monitored on this agent!</h1>
 {% if load_list %}
-    <ul>
+<table style="width:100%">
+    <tr>
+	<td>Monitored Item ID</td>
+	<td>Monitored Time</td>
+	<td>Monitored Server Load (# of chunk requests in 5 minutes)</td>
+	<td>Server Total Load (Total # of chunk requests received)</td>
+    </tr>
     {% for item in load_list %}
-        <li>Time probed at: {{ item.time }} &nbsp;&nbsp;&nbsp; Per 5 minutes load: {{ item.load }} &nbsp;&nbsp;&nbsp; Total load: {{ item.total }}</li>
+    <tr>
+	<td> {{ item.id }} </td>
+	<td> {{ item.time }} </td>
+	<td> {{ item.load }} </td>
+	<td> {{ item.total }} </td>
+    </tr>
     {% endfor %}
-    </ul>
+</table>
 {% else %}
     <p>No Load has been monitored yet.</p>
 {% endif %}
