increase the number of lines read in vclients

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -41,7 +41,7 @@
 <h2>Client Request Monitoring Module</h2>
 <p>Show the latest clients' addresses that have visited the cache agent or the current cache server recently. This module can return three types of clients: 1) the latest 20 clients connecting to the current cache agent; 2) the latest 20 clients streaming videos from the current server; 3) the latest 5 clients downloading the same video from current server.</p>
 <ul>
-	<li><a href="/client/">Show the latest clients visiting current cache agent and current video server</a></li>
+	<li><a href="/client/query/">Show the latest clients visiting current cache agent and current video server</a></li>
 	<li><a href="/client/pclient/">Show the latest clients closeby, that have visited current cache agent</a></li>
 	<li><a href="/client/vclient/">Show the latest clients streaming videos from the current server</a></li>
 	<li>Accepting ADD Request from a client closeby, adding the client as recent clients connecting the current cache agent (redirector). /client/add?client_name: client ip retrieved from the "REMOTE_HOST" field in the request.</li>
