fix the inbound/outbound traffic bug

--- a/monitor/templates/monitor/sys_stats.html
+++ b/monitor/templates/monitor/sys_stats.html
@@ -10,8 +10,8 @@
 	<td>I/O Transfers Per Second</td>
 	<td>I/O Read Blocks Per Second</td>
 	<td>I/O Write Blocks Per Second</td>
-	<td>Inbound Traffic (Mbps)</td>
-	<td>Outbound Traffic (Mbps)</td>
+	<td>Inbound Traffic (kbps)</td>
+	<td>Outbound Traffic (kbps)</td>
 	<td>Total I/O Reads (Bytes)</td>
 	<td>Total I/O Writes (Bytes)</td>
 	<td>Total Traffic Sent (Bytes)</td>
